--- a/index.html
+++ b/index.html
@@ -288,7 +288,26 @@
         facere ducimus accusantium eos veritatis neque.
       </p>
     </div>
-
+    <div class="footer">
+      <p>
+        Coded by
+        <a
+          href="https://www.linkedin.com/in/sorayacarvajal/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Soraya Carvajal</a
+        >
+        and open source on
+        <a
+          href="https://github.com/icuestiona/24-sticky-nav"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Github</a
+        >
+        ©2024 Copyright
+      </p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
